# Snapcraft

./: Cargo.toml  README.md  package.json
contracts/: Cargo.toml
contracts/core/src/: lib.rs
contracts/dao/: cargo.toml
contracts/dao/src/: errors.rs  lib.rs  operations.rs  state.rs
contracts/optimizer/: Cargo.toml
contracts/optimizer/src/: errors.rs  lib.rs  operations.rs  state.rs
contracts/rwa/: Cargo.toml
contracts/rwa/src/: errors.rs  lib.rs  operations.rs  state.rs
contracts/token/: cargo.toml
contracts/token/src/: errors.rs  lib.rs  operations.rs  state.rs
snapcraft-backend/: package-lock.json  package.json
snapcraft-frontend/: README.md  package-lock.json  package.json
snapcraft-frontend/pages/: create.tsx  index.tsx
